--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "redux-devtools-extension": "^2.13.2",
     "source-map-explorer": "^1.5.0"
   }
